# kawiri

./: .gitignore  =550.  LICENSE  README.md
.github/workflows/: ci.yml  kcvm-publish.yml  release-kawa.yml  release-konnect.yml  release-ovmf.yml
firmware/: Dockerfile.ovmf  build.sh
firmware/patches/ovmf/: 0001-cvm-validate-HOB-structure-instead-of-measuring-in-T.patch  0002-cvm-add-toggle-to-disable-firmware-UI-in-unified-Ovm.patch  0003-cvm-add-toggle-to-disable-SMBIOS-in-unified-OvmfPkgX.patch  (+3 more)
kawa/: Cargo.toml  build.sh
kawa/src/: budget.rs  config.rs  main.rs  meter.rs  server.rs  stats.rs  tunnel.rs
kawa/src/protocol/: cipher_state.rs  framer.rs  mod.rs  noise.rs  transport.rs  types.rs  xwing.rs
kawa/src/proxy/: mod.rs
kawa/src/tee/: configfs_tsm.rs  gpu_attest.rs  mod.rs  vsock_teehost.rs
kcvm/: build.sh
kcvm/base-image/: Dockerfile  Dockerfile.gpu
kcvm/images/qwen3-0.6b-q4-llamacpp-cpu/: cvm.toml  (+2 more)
kcvm/manifests/: qwen3-0.6b-q4-llamacpp-cpu.json  qwen3-0.6b-q4-llamacpp-gpu.json  qwen3-0.6b-sglang-cpu.json  qwen3-0.6b-vllm-cpu.json  qwen3-0.6b-vllm-gpu.json  qwen3-1.7b-q4-llamacpp-cpu.json  qwen3-4b-q4-llamacpp-cpu.json  qwen3.5-0.8b-q4-llamacpp-cpu.json  qwen3.5-2b-q4-llamacpp-cpu.json
konnect/: README.md  biome.json  build.sh  package.json  tsconfig.json
konnect-proxy/: package.json  tsconfig.json
konnect-proxy/src/: main.ts  pool.ts
konnect/cli/: chat.ts  config.ts  example-config.toml  index.ts  ping.ts  pool.ts  serve.ts
konnect/core/: client.ts  mod.ts
konnect/katt/: cert.ts  der.ts  index.ts  provenance.ts  types.ts  util.ts
(+110 files in other folders)
